# ncnn-llm

./: CMakeLists.txt  README.md
include/: llm.h  token.h
python/: export_tokenizer.py
src/: llm.cpp  main.cpp  token.cpp
